<resources>
    <string name="app_name">EMI Calculator</string>
    <string name="emi">Your Car EMI</string>
    <string name="calculate">Calculate Monthly EMI</string>
    <string name="rate">Rate of Interest:</string>
    <string name="principal_amount">Principal Amount:</string>
    <string name="tenure_in_month">Loan term(in month):</string>
    <string name="type_here">Type here</string>
    <string name="car_emi_calculator">Car EMI Calculator</string>
    <string name="down_payment">Down Payment:</string>
    <string name="errormsg">You have entered wrong data.</string>
</resources>